# The-Law-Database

./: Cargo.toml  README.md  api_plan.txt
AuthServer/AuthServer/: AuthServer.csproj  appsettings.json
AuthServer/AuthServer/Controllers/: AuthController.cs
Webserver/: Cargo.toml  README.md
Webserver/src/: main.rs
Website/: README.md  package.json
Website/src/: index.html  login.html
database/: README.md  lawdb.sql  x.rs
react-search-bar-main/: index.html  package-lock.json  package.json
react-search-bar-main/frontend-search/: package.json
react-search-bar-main/src/: App.jsx
react-search-bar-main/src/components/loginPages/: index.scss  loginPage.jsx
react-search-bar-main/src/components/main/: main.jsx  main.scss
react-search-bar-main/src/components/mainAdmin/: mainAdmin.jsx
react-search-bar-main/src/components/search/: SearchBar.css  SearchBar.jsx  SearchResult.css  SearchResult.jsx  SearchResultsList.css  SearchResultsList.jsx
src/: json_forms.rs  main.rs  schemas.rs
src/json_forms/: add.rs  delete.rs  search.rs  signin.rs  signup.rs  update.rs
src/sql/: initialization.sql
